[package]
name = "enclave"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
edition = "2018"

[lib]
name = "unittestsampleenclave"
crate-type = ["staticlib"]

[dependencies]
sgx_tunittest       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

rand                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rand-sgx.git"}
ring                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/ring-sgx.git"}

ecies               = { path = "../../ecies-rs-sgx" }