[package]
name = "enclave"
version = "0.1.0"
authors = ["CGair23 <chengeair23@sjtu.edu.cn>"]
edition = "2018"

[lib]
name = "unittestsampleenclave"
crate-type = ["staticlib"]

[dependencies]
sgx_tunittest       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

rand                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rand-sgx.git"}
# ring                = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/ring-sgx.git"}
ring                = { tag = "v0.16.5", git = "https://github.com/mesalock-linux/ring-sgx" }
hex                 = { tag = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-hex-sgx.git"}

ecies               = { path = "../../ecies-rs-sgx" }
libsecp256k1        = { git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx.git", features = ["mesalock_sgx"] }
hdwallet_sgx  = { git = "https://github.com/CGair23/rust-hdwallet-sgx.git" }
http_req = { git = "https://github.com/mesalock-linux/http_req-sgx.git", features = ["mesalock_sgx"] }